--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -425,7 +425,41 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpane7" title="Violations" show="bind:Widgets.liveformUpdateInspectiondesign.formWidgets.trackViolations.datavalue"></wm-tabpane>
+                            <wm-tabpane name="tabpane7" title="Violations" show="bind:Widgets.liveformUpdateInspectiondesign.formWidgets.trackViolations.datavalue">
+                                <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panelCodeSets" title="Code Sets" class="panel-primary" show="true">
+                                    <wm-livegrid formlayout="dialog" name="livegridInspectionCodeSets">
+                                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodesToInspection.dataSet" navigation="Classic" name="gridInspectionCodeSets">
+                                            <wm-grid-column binding="codeSets.codeSetTitle" caption="Set Title" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="CodeSets"></wm-grid-column>
+                                            <wm-grid-column binding="dateAdded" caption="Date Added" type="datetime" generator="assigned" readonly="true" datepattern="dd-MMM-yyyy HH:mm:ss a" formatpattern="toDate" edit-widget-type="datetime"
+                                            show="true"></wm-grid-column>
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                            <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                            <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                        </wm-grid>
+                                        <wm-liveform novalidate="false" errormessage="" title="Codestoinspection Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.lvCodesToInspection.dataSet" captionalign="left" captionposition="top"
+                                        name="liveformInspectionCodeSets">
+                                            <wm-layoutgrid columns="1" name="layoutgrid18">
+                                                <wm-gridrow name="gridrow51_2">
+                                                    <wm-gridcolumn columnwidth="12" name="gridcolumn69_2">
+                                                        <wm-form-field name="codeSets" displayname="Code Sets" required="false" show="true" generator="assigned" primary-key="false" key="codeSets" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                                        widget="select" dataset="bind:Variables.lvMunicipalityCodeSets.dataSet" datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvMunicipalityCodeSets.firstRecord"></wm-form-field>
+                                                    </wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow52">
+                                                    <wm-gridcolumn columnwidth="12" name="gridcolumn70_1">
+                                                        <wm-form-field name="inspectionDesign" displayname="Inspection Design" required="false" show="false" generator="assigned" primary-key="false" key="inspectionDesign" type="list" is-related="true" pc-display="true"
+                                                        mobile-display="true" widget="select" dataset="bind:Variables.CurrentInspectionObj.dataSet" datafield="All Fields" displayfield="inspectDesignName" defaultvalue="bind:Variables.CurrentInspectionObj.firstRecord"></wm-form-field>
+                                                    </wm-gridcolumn>
+                                                </wm-gridrow>
+                                            </wm-layoutgrid>
+                                            <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
+                                            <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                            <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                        </wm-liveform>
+                                    </wm-livegrid>
+                                </wm-panel>
+                            </wm-tabpane>
                             <wm-tabpane name="tabpaneLetters" title="Letters">
                                 <wm-livegrid formlayout="dialog" name="livegridLetters">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvLetterTemplatesData.dataSet" navigation="Classic" name="gridLetters" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
